--- a/Math/MathFundationForDataAnalysis/Clustering.ipynb
+++ b/Math/MathFundationForDataAnalysis/Clustering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "24f612fe",
+   "id": "95a60d98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "89ed9b3b",
+   "id": "ccb41d80",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf1d93e0",
+   "id": "9e6ea566",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9ab0d2d3",
+   "id": "f46d74d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "70515fb5",
+   "id": "269da67b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,8 +102,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "a023db20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sys import maxsize\n",
+    "maxsize\n",
+    "\n",
+    "centerpoint=(5, 6)\n",
+    "centerpoint[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a176edb7",
+   "id": "b9bac001",
    "metadata": {},
    "outputs": [],
    "source": [
