--- a/MachineLearning/LoanDefaultPredict/train.ipynb
+++ b/MachineLearning/LoanDefaultPredict/train.ipynb
@@ -18,6 +18,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "a19d0154",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-20T13:17:28.615665Z",
+     "start_time": "2021-10-20T13:17:28.589599Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/proffl/TwilightStruggle/MachineLearning/LoanDefaultPredict\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print (os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "id": "64fd58da",
    "metadata": {
@@ -613,6 +637,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
