--- a/MachineLearning/CDA/情绪分析.ipynb
+++ b/MachineLearning/CDA/情绪分析.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-20T01:47:49.337665Z",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-20T01:47:52.437161Z",
@@ -35,7 +35,7 @@
      "text": [
       "Building prefix dict from the default dictionary ...\n",
       "Dumping model to file cache /var/folders/zz/8hl03_bd6sj_wrd8__z72r8r0000gn/T/jieba.cache\n",
-      "Loading model cost 0.849 seconds.\n",
+      "Loading model cost 1.378 seconds.\n",
       "Prefix dict has been built successfully.\n"
      ]
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-20T01:47:57.416168Z",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-20T01:48:00.652456Z",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-20T01:48:03.720798Z",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-20T01:48:05.983466Z",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-20T01:48:08.534939Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-20T01:48:14.240843Z",
@@ -605,9 +605,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-52a413d9",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (TwilightStruggle)"
   },
   "language_info": {
    "codemirror_mode": {
