--- a/MachineLearning/CDA/文本分类-Final.ipynb
+++ b/MachineLearning/CDA/文本分类-Final.ipynb
@@ -1158,11 +1158,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "label_mapping = {\"汽车\": 1, \"财经\": 2, \"科技\": 3, \"健康\": 4, \"体育\":5, \"教育\": 6,\"文化\": 7,\"军事\": 8,\"娱乐\": 9,\"时尚\": 10}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[['报案人', '称因', '发货', '不一样', '发生', '纠纷'], ['报案人', '称要', '打', '丈母娘']]"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.DataFrame()\n",
+    "data['警情内容'] = ['报案人称因发货不一样发生纠纷', '报案人称要打丈母娘']\n",
+    "\n",
+    "\n",
+    "jieba.load_userdict(['不一样'])\n",
+    "data_sep  = [jieba.lcut(d) for d in data['警情内容']]\n",
+    "data_sep\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['/opt/anaconda3/lib/python3.8/site-packages/jieba']"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jieba.__path__\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
