--- a/Python/algorithms/convex_hull.ipynb
+++ b/Python/algorithms/convex_hull.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -80,18 +80,16 @@
     {
      "data": {
       "text/plain": [
-       "[(array([0.05995951, 0.78156425]), array([0.12651145, 0.90643178])),\n",
-       " (array([0.05995951, 0.78156425]), array([0.07647084, 0.37757109])),\n",
-       " (array([0.12651145, 0.90643178]), array([0.2247546, 0.9480319])),\n",
-       " (array([0.4819602 , 0.94254997]), array([0.2247546, 0.9480319])),\n",
-       " (array([0.4819602 , 0.94254997]), array([0.89219107, 0.72916865])),\n",
-       " (array([0.07647084, 0.37757109]), array([0.18490725, 0.15174739])),\n",
-       " (array([0.18490725, 0.15174739]), array([0.75786634, 0.12644927])),\n",
-       " (array([0.9930053 , 0.33863935]), array([0.89219107, 0.72916865])),\n",
-       " (array([0.9930053 , 0.33863935]), array([0.75786634, 0.12644927]))]"
+       "[(array([0.76861021, 0.01068256]), array([0.82063034, 0.12267688])),\n",
+       " (array([0.76861021, 0.01068256]), array([0.0577115 , 0.05372888])),\n",
+       " (array([0.10694622, 0.87785764]), array([0.00856083, 0.28653603])),\n",
+       " (array([0.10694622, 0.87785764]), array([0.89498165, 0.76298593])),\n",
+       " (array([0.00856083, 0.28653603]), array([0.0577115 , 0.05372888])),\n",
+       " (array([0.9899109 , 0.72562397]), array([0.89498165, 0.76298593])),\n",
+       " (array([0.9899109 , 0.72562397]), array([0.82063034, 0.12267688]))]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -138,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -148,19 +146,17 @@
     {
      "data": {
       "text/plain": [
-       "[array([0.05995951, 0.78156425]),\n",
-       " array([0.12651145, 0.90643178]),\n",
-       " array([0.2247546, 0.9480319]),\n",
-       " array([0.4819602 , 0.94254997]),\n",
-       " array([0.89219107, 0.72916865]),\n",
-       " array([0.9930053 , 0.33863935]),\n",
-       " array([0.75786634, 0.12644927]),\n",
-       " array([0.18490725, 0.15174739]),\n",
-       " array([0.07647084, 0.37757109]),\n",
-       " array([0.05995951, 0.78156425])]"
+       "[array([0.76861021, 0.01068256]),\n",
+       " array([0.82063034, 0.12267688]),\n",
+       " array([0.9899109 , 0.72562397]),\n",
+       " array([0.89498165, 0.76298593]),\n",
+       " array([0.10694622, 0.87785764]),\n",
+       " array([0.00856083, 0.28653603]),\n",
+       " array([0.0577115 , 0.05372888]),\n",
+       " array([0.76861021, 0.01068256])]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -216,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -224,54 +220,32 @@
    },
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
-    "ax.scatter(points[:,0], points[:,1])\n",
+    "# using ArtistAnimation \n",
+    "# fig, ax = plt.subplots()\n",
+    "# ax.scatter(points[:,0], points[:,1])\n",
     "\n",
-    "plots = []\n",
-    "for chp in convex_hull_lines:\n",
-    "    plot, = plt.plot([chp[0][0], chp[1][0]], [chp[0][1], chp[1][1]], color='red')\n",
-    "    plots.append([plot])\n",
-    "ani = animation.ArtistAnimation(fig, plots, interval=500)\n",
-    "plt.show()"
+    "# plots = []\n",
+    "# for chp in convex_hull_lines:\n",
+    "#     plot, = plt.plot([chp[0][0], chp[1][0]], [chp[0][1], chp[1][1]], color='red')\n",
+    "#     plots.append([plot])\n",
+    "# ani = animation.ArtistAnimation(fig, plots, interval=500)\n",
+    "# plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.animation import FuncAnimation\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "xdata, ydata = [], []\n",
-    "ln, = plt.plot([], [], 'ro')\n",
-    "\n",
-    "def init():\n",
-    "    ax.set_xlim(0, 2*np.pi)\n",
-    "    ax.set_ylim(-1, 1)\n",
-    "    return ln,\n",
-    "\n",
-    "def update(frame):\n",
-    "    xdata.append(frame)\n",
-    "    ydata.append(np.sin(frame))\n",
-    "    ln.set_data(xdata, ydata)\n",
-    "    return ln,\n",
-    "\n",
-    "ani = FuncAnimation(fig, update, frames=np.linspace(0, 2*np.pi, 128),\n",
-    "                    init_func=init, blit=True)\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -279,38 +253,18 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.7652208 , 0.57434618],\n",
-       "       [0.24624163, 0.1148129 ],\n",
-       "       [0.83187494, 0.01870069],\n",
-       "       [0.4361094 , 0.4830547 ],\n",
-       "       [0.75839505, 0.36891434],\n",
-       "       [0.38320587, 0.09916838],\n",
-       "       [0.8926468 , 0.72681319],\n",
-       "       [0.43016413, 0.24530985],\n",
-       "       [0.28993449, 0.54255309],\n",
-       "       [0.46247471, 0.11705959],\n",
-       "       [0.60689498, 0.13017807],\n",
-       "       [0.21477287, 0.55492563],\n",
-       "       [0.43991411, 0.34753945],\n",
-       "       [0.94978363, 0.92993422],\n",
-       "       [0.85873485, 0.79919148],\n",
-       "       [0.80058396, 0.22768757],\n",
-       "       [0.77241986, 0.43287499],\n",
-       "       [0.44505415, 0.41173636],\n",
-       "       [0.73344953, 0.59602431],\n",
-       "       [0.93962887, 0.82192653]])"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'xgboost'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-e528dc1a32ff>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mxgboost\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
+     ]
     }
    ],
-   "source": [
-    "points"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -333,5 +287,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
