python: add sigmoid plot

--- a/Python/matplotlib/plot_decision_region.ipynb
+++ b/Python/matplotlib/plot_decision_region.ipynb
@@ -126,9 +126,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-52a413d9",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (TwilightStruggle)"
   },
   "language_info": {
    "codemirror_mode": {
