--- a/MachineLearning/PythonMachineLearning/svm.ipynb
+++ b/MachineLearning/PythonMachineLearning/svm.ipynb
@@ -271,8 +271,36 @@
     "plt.xlabel('petal length [std]')\n",
     "plt.ylabel('petal width [std]')\n",
     "plt.legend(loc='upper left')\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1, 2, 3)\n",
+      "(0, 1, 2, 4)\n",
+      "(0, 1, 3, 4)\n",
+      "(0, 2, 3, 4)\n",
+      "(1, 2, 3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "indices = tuple(range(5))\n",
+    "from itertools import combinations\n",
+    "for p in combinations(indices, 4):\n",
+    "    print(p)"
    ],
    "metadata": {
     "collapsed": false,
