--- a/Algorithm/python/convex_hull.ipynb
+++ b/Algorithm/python/convex_hull.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 126,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -79,17 +79,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[(array([0.76861021, 0.01068256]), array([0.82063034, 0.12267688])),\n",
-       " (array([0.76861021, 0.01068256]), array([0.0577115 , 0.05372888])),\n",
-       " (array([0.10694622, 0.87785764]), array([0.00856083, 0.28653603])),\n",
-       " (array([0.10694622, 0.87785764]), array([0.89498165, 0.76298593])),\n",
-       " (array([0.00856083, 0.28653603]), array([0.0577115 , 0.05372888])),\n",
-       " (array([0.9899109 , 0.72562397]), array([0.89498165, 0.76298593])),\n",
-       " (array([0.9899109 , 0.72562397]), array([0.82063034, 0.12267688]))]"
-      ]
+      "text/plain": "[(array([0.90010028, 0.22906409]), array([0.91245884, 0.79083504])),\n (array([0.90010028, 0.22906409]), array([0.80885278, 0.04285968])),\n (array([0.91245884, 0.79083504]), array([0.88552795, 0.96848521])),\n (array([0.88552795, 0.96848521]), array([0.34154526, 0.93788143])),\n (array([0.34154526, 0.93788143]), array([0.02697326, 0.66737167])),\n (array([0.02697326, 0.66737167]), array([0.00639313, 0.45892407])),\n (array([0.00639313, 0.45892407]), array([0.32524678, 0.09553586])),\n (array([0.74976554, 0.02988612]), array([0.80885278, 0.04285968])),\n (array([0.74976554, 0.02988612]), array([0.32524678, 0.09553586]))]"
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -136,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -145,18 +137,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[array([0.76861021, 0.01068256]),\n",
-       " array([0.82063034, 0.12267688]),\n",
-       " array([0.9899109 , 0.72562397]),\n",
-       " array([0.89498165, 0.76298593]),\n",
-       " array([0.10694622, 0.87785764]),\n",
-       " array([0.00856083, 0.28653603]),\n",
-       " array([0.0577115 , 0.05372888]),\n",
-       " array([0.76861021, 0.01068256])]"
-      ]
+      "text/plain": "[array([0.90010028, 0.22906409]),\n array([0.91245884, 0.79083504]),\n array([0.88552795, 0.96848521]),\n array([0.34154526, 0.93788143]),\n array([0.02697326, 0.66737167]),\n array([0.00639313, 0.45892407]),\n array([0.32524678, 0.09553586]),\n array([0.74976554, 0.02988612]),\n array([0.80885278, 0.04285968]),\n array([0.90010028, 0.22906409])]"
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -234,37 +217,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 133,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "point_count = 40\n",
+    "points = np.random.rand(point_count * 2).reshape((point_count, 2))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 134,
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'xgboost'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-2-e528dc1a32ff>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[1;32mimport\u001B[0m \u001B[0mxgboost\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'xgboost'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "middle points:\n",
+      " [[0.24911198 0.0537784 ]]\n",
+      "left points:\n",
+      " [[0.1491935  0.86675398]\n",
+      " [0.19271733 0.44552498]\n",
+      " [0.0456004  0.94907106]\n",
+      " [0.03911204 0.8724709 ]\n",
+      " [0.05860872 0.72341903]\n",
+      " [0.11814678 0.4282176 ]\n",
+      " [0.24292403 0.07022977]\n",
+      " [0.16876434 0.24612723]\n",
+      " [0.15041063 0.2473838 ]\n",
+      " [0.16908403 0.17043462]\n",
+      " [0.07103547 0.12481972]]\n",
+      "right points:\n",
+      " [[0.43911136 0.06244422]\n",
+      " [0.88232596 0.21687006]\n",
+      " [0.77758925 0.22635329]\n",
+      " [0.75763614 0.23610491]\n",
+      " [0.73634067 0.230163  ]\n",
+      " [0.49185819 0.17413785]\n",
+      " [0.64609587 0.25276115]\n",
+      " [0.85150788 0.40352943]\n",
+      " [0.74892024 0.3545353 ]\n",
+      " [0.90101104 0.4690596 ]\n",
+      " [0.66219079 0.32533606]\n",
+      " [0.90909567 0.4999313 ]\n",
+      " [0.83852728 0.68094133]\n",
+      " [0.92278984 0.87357076]\n",
+      " [0.94359884 0.91334258]\n",
+      " [0.79646225 0.75175681]\n",
+      " [0.54096778 0.48740329]\n",
+      " [0.58652733 0.63375405]\n",
+      " [0.37940435 0.31185016]\n",
+      " [0.59570076 0.77273721]\n",
+      " [0.58025709 0.80103022]\n",
+      " [0.54171578 0.77865087]\n",
+      " [0.45720836 0.58878964]\n",
+      " [0.57145127 0.90271426]\n",
+      " [0.57484957 0.95385413]\n",
+      " [0.41724058 0.56694244]\n",
+      " [0.49154417 0.90090244]\n",
+      " [0.40303231 0.82008224]]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# points with minimum y must be in the convex hull points.\n",
+    "# sort all points by angles. a simpler solutions:\n",
+    "# split points into two groups by point's x coordinate is greater or small than min_y's x\n",
+    "# higher points sorted by its' y ascend and smaller points sorted by its' y descend.\n",
+    "# combine these points.\n",
+    "point_minY = points[points[:, 1].argmin()][1]\n",
+    "points_minY = points[points[:,1]==point_minY]\n",
+    "points_minY = sorted(points_minY, key=lambda p: p[0], reverse=True)\n",
+    "p0 = points_minY[0]\n",
+    "\n",
+    "points_right = points[points[:, 0] > p0[0]]\n",
+    "points_middle = points[points[:, 0] == p0[0]]\n",
+    "points_left = points[points[:, 0] < p0[0]]\n",
+    "\n",
+    "def angle(p0, p1):\n",
+    "    return np.arccos((p1[1] - p0[1])/np.sqrt((p1[0]-p0[0])**2 + (p1[1]-p0[1])**2))\n",
+    "\n",
+    "points_right = np.array(sorted(points_right, key=lambda p: -angle(p0, p)))\n",
+    "points_middle = np.array(sorted(points_middle, key=lambda p: p[1]))\n",
+    "points_left = np.array(sorted(points_left, key=lambda p: angle(p0, p)))\n",
+    "print(\"middle points:\\n\", points_middle)\n",
+    "print(\"left points:\\n\", points_left)\n",
+    "print(\"right points:\\n\", points_right)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "outputs": [],
+   "source": [
+    "convex_hull_points = [p0]\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "plt.scatter(points[:, 0], points[:, 1])\n",
+    "plt.show()\n",
+    "for point_cur in points_right:\n",
+    "    while len(convex_hull_points) > 1:\n",
+    "        point_last = convex_hull_points[-1]\n",
+    "        point_last2 = convex_hull_points[-2]\n",
+    "        if point_side(point_cur[0], point_cur[1], point_last2[0], point_last2[1], point_last[0], point_last[1]) == RIGHT_SIDE:\n",
+    "            convex_hull_points.pop(-1)\n",
+    "        else:\n",
+    "            break\n",
+    "    convex_hull_points.append(point_cur)\n",
+    "\n",
+    "if len(points_middle) > 1:\n",
+    "    convex_hull_points.append(points_middle[-1])\n",
+    "\n",
+    "for point_cur in points_left:\n",
+    "    while len(convex_hull_points) > 1:\n",
+    "        point_last = convex_hull_points[-1]\n",
+    "        point_last2 = convex_hull_points[-2]\n",
+    "        if point_side(point_cur[0], point_cur[1], point_last2[0], point_last2[1], point_last[0], point_last[1]) == RIGHT_SIDE:\n",
+    "            convex_hull_points.pop(-1)\n",
+    "        else:\n",
+    "            break\n",
+    "    convex_hull_points.append(point_cur)\n",
+    "\n",
+    "for p in convex_hull_points:\n",
+    "    plt.scatter(p[0], p[1], c='r', marker='x')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
