plot gif to describe the process

--- a/Algorithm/python/convex_hull.ipynb
+++ b/Algorithm/python/convex_hull.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 170,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -317,41 +317,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 181,
    "outputs": [],
    "source": [
     "convex_hull_points = [p0]\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "plt.scatter(points[:, 0], points[:, 1])\n",
-    "plt.show()\n",
-    "for point_cur in points_right:\n",
-    "    while len(convex_hull_points) > 1:\n",
-    "        point_last = convex_hull_points[-1]\n",
-    "        point_last2 = convex_hull_points[-2]\n",
-    "        if point_side(point_cur[0], point_cur[1], point_last2[0], point_last2[1], point_last[0], point_last[1]) == RIGHT_SIDE:\n",
-    "            convex_hull_points.pop(-1)\n",
-    "        else:\n",
-    "            break\n",
-    "    convex_hull_points.append(point_cur)\n",
-    "\n",
+    "points_check = points_right\n",
     "if len(points_middle) > 1:\n",
-    "    convex_hull_points.append(points_middle[-1])\n",
+    "    points_check.append(points_middle[-1])\n",
+    "points_check = np.vstack([points_check, points_left])\n",
     "\n",
-    "for point_cur in points_left:\n",
+    "step = 0\n",
+    "step_convex_line = []\n",
+    "step_cur_point = []\n",
+    "for point_cur in points_check:\n",
     "    while len(convex_hull_points) > 1:\n",
+    "        # for plot\n",
+    "        step_cur_point.append(point_cur)\n",
+    "        step_convex_line.append(np.array(convex_hull_points))\n",
+    "        step += 1\n",
+    "\n",
+    "        # make sure last point is in the left side\n",
     "        point_last = convex_hull_points[-1]\n",
     "        point_last2 = convex_hull_points[-2]\n",
     "        if point_side(point_cur[0], point_cur[1], point_last2[0], point_last2[1], point_last[0], point_last[1]) == RIGHT_SIDE:\n",
     "            convex_hull_points.pop(-1)\n",
     "        else:\n",
     "            break\n",
-    "    convex_hull_points.append(point_cur)\n",
+    "    convex_hull_points.append(point_cur)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.scatter(points[:, 0], points[:, 1])\n",
+    "# convex_try_line = plt.plot([], [], c='orange', marker='--')\n",
+    "convex_hull_points = np.array(convex_hull_points)\n",
+    "plt.scatter(points[:, 0], points[:, 1], c='b')\n",
+    "ax.scatter(p0[0], p0[1], c='r', marker='x')\n",
+    "def update(frm):\n",
+    "    ax.clear()\n",
+    "    ax.scatter(points[:, 0], points[:, 1])\n",
+    "    ax.plot(step_convex_line[frm][:, 0], step_convex_line[frm][:, 1], c='r')\n",
+    "    ax.scatter(step_cur_point[frm][0], step_cur_point[frm][1], c='r', marker='x')\n",
+    "    c_line = np.vstack((step_cur_point[frm], (step_convex_line[frm][-2:-1,:])))\n",
+    "    ax.plot(c_line[:, 0], c_line[:, 1], c='g', linestyle='--')\n",
+    "    ax.scatter(step_convex_line[frm][-1:, 0], step_convex_line[frm][-1:, 1], c='orange', marker='^')\n",
     "\n",
-    "for p in convex_hull_points:\n",
-    "    plt.scatter(p[0], p[1], c='r', marker='x')\n",
+    "    return\n",
+    "ani = animation.FuncAnimation(fig, update, frames=np.arange(0, step), interval=1000, repeat=True, repeat_delay=2000)\n",
     "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.75763614 0.23610491]]\n",
+      "[0.49185819 0.17413785]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "<matplotlib.collections.PathCollection at 0x1e6c6b5f490>"
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frm = 5\n",
+    "print(step_convex_line[frm][-2:-1,:])\n",
+    "print(step_cur_point[frm])\n",
+    "data = np.vstack((step_cur_point[frm], (step_convex_line[frm][-2:-1,:])))\n",
+    "plt.scatter(step_convex_line[frm][-1:, 0], step_convex_line[frm][-1:, 1], c='#1f77b4', marker='^')"
    ],
    "metadata": {
     "collapsed": false,
