Python Machine Learning: save models using pickle

--- a/MachineLearning/PythonMachineLearning/sentiment_analysis.ipynb
+++ b/MachineLearning/PythonMachineLearning/sentiment_analysis.ipynb
@@ -1350,6 +1350,28 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "# save model\n",
+    "import pickle\n",
+    "import os\n",
+    "dest = os.path.join('movieclassifier', 'pkl_objects')\n",
+    "if not os.path.exists(dest):\n",
+    "    os.makedirs(dest)\n",
+    "\n",
+    "pickle.dump(stop, open(os.path.join(dest, 'stopwords.pkl'), 'wb'), protocol=4)\n",
+    "pickle.dump(clf, open(os.path.join(dest, 'classifier.pkl'), 'wb'), protocol=4)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
