--- a/MachineLearning/PythonMachineLearning/sentiment_analysis_lda.ipynb
+++ b/MachineLearning/PythonMachineLearning/sentiment_analysis_lda.ipynb
@@ -132,7 +132,8 @@
     "horror = X_topics[:, 5].argsort()[::-1]\n",
     "for iter_idx, movie_idx in enumerate(horror[:3]):\n",
     "    print('\\nHorror movie #%d:' % (iter_idx + 1))\n",
-    "    print(df['review'][movie_idx][:300], '...')"
+    "    print(df['review'][movie_idx][:300], '...')\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
