--- a/MachineLearning/PythonMachineLearning/sentiment_analysis.ipynb
+++ b/MachineLearning/PythonMachineLearning/sentiment_analysis.ipynb
@@ -1364,7 +1364,7 @@
     "    os.makedirs(dest)\n",
     "\n",
     "pickle.dump(stop, open(os.path.join(dest, 'stopwords.pkl'), 'wb'), protocol=4)\n",
-    "pickle.dump(clf, open(os.path.join(dest, 'classifier.pkl'), 'wb'), protocol=4)"
+    "pickle.dump(clf, open(os.path.join(dest, 'classifier.pkl'), 'wb'), protocol=4)\n"
    ],
    "metadata": {
     "collapsed": false,
