Algorithm: find minimum tangent circle: find the line

--- a/MachineLearning/PythonMachineLearning/split_random.ipynb
+++ b/MachineLearning/PythonMachineLearning/split_random.ipynb
@@ -2,14 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[83 23  7  1 72]\n",
+      "[ 7 60]\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "arr = np.array([1,7,23,72,7,83,60])\n",
+    "np.random.shuffle(arr)\n",
+    "p = 5\n",
+    "a1 = arr[:p]\n",
+    "a2 = arr[p:]\n",
+    "print(a1)\n",
+    "print(a2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
