tianchi: youku video enhancement

--- a/Algorithm/python/minimum_tangent_circle.ipynb
+++ b/Algorithm/python/minimum_tangent_circle.ipynb
@@ -116,7 +116,8 @@
     "ax.add_artist(circle)\n",
     "plt.xlim(-0.5, 1.5)\n",
     "plt.ylim(-0.5, 1.5)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
