--- a/MachineLearning/minitorch/operators_test.ipynb
+++ b/MachineLearning/minitorch/operators_test.ipynb
@@ -4,16 +4,37 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import operators as operators\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.04\n",
+      "0.06\n",
+      "0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1, x2 = operators.addLists([0.01, 0.02], [0.03, 0.04])\n",
+    "print(x1)\n",
+    "print(x2)\n",
+    "\n",
+    "print(operators.sum([0.01, 0.02,0.03, 0.04]))"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
