sigmoid_optimization: using np.where instead of if else statement; rewrite my_rnn

--- a/MachineLearning/PythonMachineLearning/my_rnn.ipynb
+++ b/MachineLearning/PythonMachineLearning/my_rnn.ipynb
@@ -7,12 +7,25 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
+    "# http://iamtrask.github.io/2015/11/15/anyone-can-code-lstm/\n",
     "import copy, numpy as np\n",
     "\n",
     "\n",
     "np.random.seed(2)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
