--- a/MachineLearning/PythonMachineLearning/rnn.ipynb
+++ b/MachineLearning/PythonMachineLearning/rnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -11,55 +11,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(1, 16)\n",
+      "(1, 16)\n",
+      "(1, 16)\n",
+      "(1, 16)\n",
+      "(1, 16)\n",
+      "(1, 16)\n",
+      "(1, 16)\n",
+      "(1, 16)\n",
       "Error:[4.140684]\n",
       "Pred:[1 1 1 1 1 1 1 1]\n",
       "True:[0 1 1 1 1 0 0 0]\n",
       "47 + 73 = 255\n",
-      "------------\n",
-      "Error:[3.94202556]\n",
-      "Pred:[1 1 0 1 1 1 1 1]\n",
-      "True:[1 0 0 0 1 1 0 1]\n",
-      "105 + 36 = 223\n",
-      "------------\n",
-      "Error:[3.67044239]\n",
-      "Pred:[0 0 1 1 1 1 1 1]\n",
-      "True:[0 0 0 1 1 1 1 1]\n",
-      "21 + 10 = 63\n",
-      "------------\n",
-      "Error:[3.64945456]\n",
-      "Pred:[0 0 1 1 0 1 1 0]\n",
-      "True:[0 0 1 0 0 1 0 0]\n",
-      "27 + 9 = 54\n",
-      "------------\n",
-      "Error:[3.24981446]\n",
-      "Pred:[0 0 1 1 1 0 0 1]\n",
-      "True:[0 0 1 1 0 1 0 1]\n",
-      "46 + 7 = 57\n",
-      "------------\n",
-      "Error:[3.22888121]\n",
-      "Pred:[0 1 0 0 1 1 1 1]\n",
-      "True:[0 1 1 0 0 1 1 1]\n",
-      "53 + 50 = 79\n",
-      "------------\n",
-      "Error:[1.4383746]\n",
-      "Pred:[1 0 0 0 0 1 0 1]\n",
-      "True:[1 0 0 0 0 1 0 1]\n",
-      "115 + 18 = 133\n",
-      "------------\n",
-      "Error:[1.08407428]\n",
-      "Pred:[1 0 0 0 0 0 0 1]\n",
-      "True:[1 0 0 0 0 0 0 1]\n",
-      "58 + 71 = 129\n",
-      "------------\n",
-      "Error:[0.63426907]\n",
-      "Pred:[0 1 1 1 1 0 1 0]\n",
-      "True:[0 1 1 1 1 0 1 0]\n",
-      "79 + 43 = 122\n",
-      "------------\n",
-      "Error:[0.46586162]\n",
-      "Pred:[0 1 1 0 1 0 1 1]\n",
-      "True:[0 1 1 0 1 0 1 1]\n",
-      "28 + 79 = 107\n",
       "------------\n"
      ]
     }
@@ -106,9 +69,8 @@
     "synapse_0_update = np.zeros_like(synapse_0)\n",
     "synapse_1_update = np.zeros_like(synapse_1)\n",
     "synapse_h_update = np.zeros_like(synapse_h)\n",
-    "\n",
     "# training logic\n",
-    "for j in range(10000):\n",
+    "for j in range(1):\n",
     "\n",
     "    # generate a simple addition problem (a + b = c)\n",
     "    a_int = np.random.randint(largest_number / 2)  # int version\n",
@@ -165,7 +127,7 @@
     "        # error at hidden layer\n",
     "        layer_1_delta = (future_layer_1_delta.dot(synapse_h.T) + layer_2_delta.dot(\n",
     "            synapse_1.T)) * sigmoid_output_to_derivative(layer_1)\n",
-    "\n",
+    "        print(layer_1_delta.shape)\n",
     "        # let's update all our weights so can try again\n",
     "        synapse_1_update += np.atleast_2d(layer_1).T.dot(layer_2_delta)\n",
     "        synapse_h_update += np.atleast_2d(prev_layer_1).T.dot(layer_1_delta)\n",
