--- a/Python/machine_learning/sigmoid_optimization.ipynb
+++ b/Python/machine_learning/sigmoid_optimization.ipynb
@@ -50,162 +50,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error:[3.86409399]\n",
-      "Pred:[0 0 0 0 0 0 0 1]\n",
-      "True:[1 1 0 0 0 1 0 1]\n",
-      "111 + 86 = 1\n",
-      "in these 1000 epochs, there's    1 error \n",
+      "Pred:[1 1 1 1 1 1 1 1]\n",
+      "True:[0 1 0 1 0 0 0 1]\n",
+      "17 + 64 = 255\n",
       "------------\n",
-      "Error:[4.10710529]\n",
-      "Pred:[1 0 1 1 1 1 0 1]\n",
-      "True:[0 1 1 0 1 0 1 0]\n",
-      "94 + 12 = 189\n",
-      "in these 1000 epochs, there's  998 error \n",
+      "Pred:[1 1 1 0 0 0 0 0]\n",
+      "True:[1 1 0 0 0 0 0 1]\n",
+      "113 + 80 = 224\n",
       "------------\n",
-      "Error:[3.67760383]\n",
-      "Pred:[1 0 0 0 0 1 0 0]\n",
-      "True:[1 0 1 1 0 1 0 0]\n",
-      "82 + 98 = 132\n",
-      "in these 1000 epochs, there's  991 error \n",
-      "------------\n",
-      "Error:[3.78018724]\n",
-      "Pred:[0 1 0 0 0 0 0 0]\n",
-      "True:[1 0 1 0 1 0 1 0]\n",
-      "58 + 112 = 64\n",
-      "in these 1000 epochs, there's  967 error \n",
-      "------------\n",
-      "Error:[2.83854546]\n",
-      "Pred:[0 1 1 1 0 1 0 1]\n",
-      "True:[0 1 0 0 0 1 0 1]\n",
-      "58 + 11 = 117\n",
-      "in these 1000 epochs, there's  800 error \n",
-      "------------\n",
-      "Error:[1.03459131]\n",
-      "Pred:[1 0 0 0 1 1 0 0]\n",
-      "True:[1 0 0 0 1 1 0 0]\n",
-      "36 + 104 = 140\n",
-      "in these 1000 epochs, there's  422 error \n",
-      "------------\n",
-      "Error:[1.10216843]\n",
-      "Pred:[0 1 1 1 0 1 0 0]\n",
-      "True:[0 1 1 1 0 1 0 0]\n",
-      "61 + 55 = 116\n",
-      "in these 1000 epochs, there's   58 error \n",
-      "------------\n",
-      "Error:[0.62922836]\n",
-      "Pred:[0 1 0 0 0 1 0 0]\n",
-      "True:[0 1 0 0 0 1 0 0]\n",
-      "26 + 42 = 68\n",
-      "in these 1000 epochs, there's   11 error \n",
-      "------------\n",
-      "Error:[0.2254246]\n",
-      "Pred:[0 1 1 1 0 0 0 0]\n",
-      "True:[0 1 1 1 0 0 0 0]\n",
-      "80 + 32 = 112\n",
-      "in these 1000 epochs, there's    1 error \n",
-      "------------\n",
-      "Error:[0.43338136]\n",
-      "Pred:[0 1 1 0 0 0 0 1]\n",
+      "Pred:[0 0 1 0 1 0 1 1]\n",
       "True:[0 1 1 0 0 0 0 1]\n",
-      "27 + 70 = 97\n",
-      "in these 1000 epochs, there's    0 error \n",
+      "4 + 93 = 43\n",
+      "------------\n",
+      "Pred:[0 0 0 0 1 0 0 1]\n",
+      "True:[0 0 0 1 1 0 0 0]\n",
+      "4 + 20 = 9\n",
+      "------------\n",
+      "Pred:[0 0 0 0 1 0 0 1]\n",
+      "True:[1 0 0 0 1 0 0 1]\n",
+      "58 + 79 = 9\n",
+      "------------\n",
+      "Pred:[0 1 0 0 0 0 1 1]\n",
+      "True:[0 1 0 0 0 0 1 1]\n",
+      "40 + 27 = 67\n",
+      "------------\n",
+      "Pred:[1 0 1 1 0 0 0 0]\n",
+      "True:[1 0 1 1 0 0 0 0]\n",
+      "114 + 62 = 176\n",
+      "------------\n",
+      "Pred:[1 0 0 1 0 1 1 0]\n",
+      "True:[1 0 0 1 0 1 1 0]\n",
+      "23 + 127 = 150\n",
+      "------------\n",
+      "Pred:[1 0 1 1 1 0 0 1]\n",
+      "True:[1 0 1 1 1 0 0 1]\n",
+      "64 + 121 = 185\n",
+      "------------\n",
+      "Pred:[0 1 1 0 1 0 0 0]\n",
+      "True:[0 1 1 0 1 0 0 0]\n",
+      "37 + 67 = 104\n",
       "------------\n"
      ]
     }
    ],
    "source": [
+    "learning_rate = 0.1\n",
     "input_dim = 2\n",
     "hidden_dim = 16\n",
     "output_dim = 1\n",
-    "learning_rate = 0.1\n",
+    "epochs = 10000\n",
     "\n",
-    "synapse_ih = 2 * np.random.random((input_dim, hidden_dim)) - 1  # input_hidden\n",
-    "synapse_ho = 2 * np.random.random((hidden_dim, output_dim)) - 1  # hidden_output\n",
-    "synapse_hh = 2 * np.random.random((hidden_dim, hidden_dim)) - 1  # hidden_next_hidden\n",
+    "w_ih = 2 * np.random.random((input_dim, hidden_dim)) - 1  # input_layer to hidden_layer parameters\n",
+    "w_hh = 2 * np.random.random((hidden_dim, hidden_dim)) - 1  # hidden_layer to next_hidden_layer parameters\n",
+    "w_ho = 2 * np.random.random((hidden_dim, output_dim)) - 1  # hidden_layer to output_layer parameters\n",
     "\n",
-    "synapse_ih_update = np.zeros_like(synapse_ih)\n",
-    "synapse_ho_update = np.zeros_like(synapse_ho)\n",
-    "synapse_hh_update = np.zeros_like(synapse_hh)\n",
+    "w_ih_update = np.zeros_like(w_ih)\n",
+    "w_hh_update = np.zeros_like(w_hh)\n",
+    "w_ho_update = np.zeros_like(w_ho)\n",
     "\n",
-    "error_count = 0\n",
-    "for epoch in range(10000):\n",
-    "    a_int = np.random.randint(largest_number / 2)\n",
+    "for epoch in range(epochs):\n",
+    "    # generate input data and output data\n",
+    "    a_int = np.random.randint(0, largest_number / 2)\n",
     "    a = int2binary[a_int]\n",
-    "    b_int = np.random.randint(largest_number / 2)\n",
+    "    b_int = np.random.randint(0, largest_number / 2)\n",
     "    b = int2binary[b_int]\n",
     "    c_int = a_int + b_int\n",
     "    c = int2binary[c_int]\n",
     "\n",
     "    d = np.zeros_like(c)\n",
-    "    overall_error = 0\n",
     "\n",
+    "    # forward learning\n",
+    "    layer_output_deltas = list()\n",
+    "    layer_hidden_values = list()\n",
+    "    layer_hidden_values.append(np.zeros(hidden_dim))\n",
+    "    for i in range(binary_dim):\n",
+    "        position_binary = binary_dim - i - 1\n",
+    "        xi = np.array([[a[position_binary], b[position_binary]]])\n",
+    "        yi = np.array([[c[position_binary]]]).T\n",
     "\n",
-    "    layer_2_deltas = list()\n",
-    "    layer_1_values = list()\n",
-    "    layer_1_values.append(np.zeros(hidden_dim))\n",
+    "        layer_hidden = sigmoid(np.dot(xi, w_ih) + np.dot(layer_hidden_values[-1], w_hh))\n",
+    "        layer_output = sigmoid(np.dot(layer_hidden, w_ho))\n",
     "\n",
-    "    for position in range(binary_dim):\n",
-    "        X = np.array([[a[binary_dim - position - 1], b[binary_dim - position - 1]]])\n",
-    "        y = np.array([[c[binary_dim - position - 1]]]).T\n",
+    "        layer_output_error = yi - layer_output\n",
+    "        layer_output_deltas.append(layer_output_error * sigmoid_derivative(layer_output))\n",
     "\n",
-    "        layer_1 = sigmoid(np.dot(X, synapse_ih) + np.dot(layer_1_values[-1], synapse_hh))\n",
-    "        layer_2 = sigmoid(np.dot(layer_1, synapse_ho))\n",
+    "        layer_hidden_values.append(copy.deepcopy(layer_hidden))\n",
     "\n",
-    "        layer_2_error = y - layer_2\n",
-    "        layer_2_deltas.append(layer_2_error * sigmoid_derivative(layer_2))\n",
-    "        overall_error += np.abs(layer_2_error[0])\n",
-    "        d[binary_dim - position - 1] = np.round(layer_2[0][0])\n",
-    "        layer_1_values.append(copy.deepcopy(layer_1))\n",
+    "        d[position_binary] = np.round(layer_output[0][0])\n",
     "\n",
-    "    future_layer_1_delta = np.zeros(hidden_dim)\n",
-    "    for position in range(binary_dim):\n",
-    "        X = np.array([[a[position], b[position]]])\n",
-    "        layer_1 = layer_1_values[-position - 1]\n",
-    "        prev_layer_1 = layer_1_values[-position - 2]\n",
+    "    # backward learning\n",
+    "    future_layer_hidden_delta = np.zeros(hidden_dim)\n",
+    "    for i in range(binary_dim):\n",
+    "        layer_output_delta = layer_output_deltas[-i - 1]\n",
+    "        layer_hidden = layer_hidden_values[-i - 1]\n",
+    "        w_ho_update += np.atleast_2d(layer_hidden).T.dot(layer_output_delta)\n",
     "\n",
-    "        layer_2_delta = layer_2_deltas[-position - 1]\n",
-    "        layer_1_delta = (future_layer_1_delta.dot(synapse_hh.T) + layer_2_delta.dot(synapse_ho.T)) * sigmoid_derivative(\n",
-    "            layer_1)\n",
+    "        layer_hidden = layer_hidden_values[-i - 1]\n",
+    "        layer_hidden_delta = (future_layer_hidden_delta.dot(w_hh.T) + layer_output_delta.dot(\n",
+    "            w_ho.T)) * sigmoid_derivative(layer_hidden)\n",
+    "        pre_layer_hidden = layer_hidden_values[-i - 2]\n",
     "\n",
-    "        synapse_ho_update += np.atleast_2d(layer_1).T.dot(layer_2_delta)\n",
-    "        synapse_hh_update += np.atleast_2d(prev_layer_1).T.dot(layer_1_delta)\n",
-    "        synapse_ih_update += X.T.dot(layer_1_delta)\n",
+    "        w_hh_update += np.atleast_2d(pre_layer_hidden).T.dot(layer_hidden_delta)\n",
     "\n",
-    "        future_layer_1_delta = layer_1_delta\n",
+    "        x = np.array([[a[i], b[i]]])\n",
+    "        w_ih_update += x.T.dot(layer_hidden_delta)\n",
     "\n",
-    "    synapse_ih += synapse_ih_update * learning_rate\n",
-    "    synapse_ho += synapse_ho_update * learning_rate\n",
-    "    synapse_hh += synapse_hh_update * learning_rate\n",
+    "        future_layer_hidden_delta = layer_hidden_delta\n",
     "\n",
-    "    synapse_ih_update *= 0\n",
-    "    synapse_ho_update *= 0\n",
-    "    synapse_hh_update *= 0\n",
+    "    w_ho += learning_rate * w_ho_update\n",
+    "    w_hh += learning_rate * w_hh_update\n",
+    "    w_ih += learning_rate * w_ih_update\n",
     "\n",
-    "    out = 0\n",
-    "    for index, x in enumerate(reversed(d)):\n",
-    "        out += x * pow(2, index)\n",
-    "    if out != c_int:\n",
-    "        error_count += 1\n",
+    "    w_ho_update *= 0\n",
+    "    w_hh_update *= 0\n",
+    "    w_ih_update *= 0\n",
     "\n",
-    "    # print out progress\n",
     "    if epoch % 1000 == 0:\n",
-    "        print(\"Error:\" + str(overall_error))\n",
     "        print(\"Pred:\" + str(d))\n",
     "        print(\"True:\" + str(c))\n",
     "        out = 0\n",
     "        for index, x in enumerate(reversed(d)):\n",
     "            out += x * pow(2, index)\n",
     "        print(str(a_int) + \" + \" + str(b_int) + \" = \" + str(out))\n",
-    "\n",
-    "        print(\"in these 1000 epochs, there's %4d error \" % error_count)\n",
-    "        error_count = 0\n",
-    "        print(\"------------\")\n"
+    "        print(\"------------\")\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
